welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: too many arguments for method colorier: ()Unit
  colorier(tableauCouleur);
          ^